--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <link rel="manifest" href="/site.webmanifest">
     <title>QR-scanner</title>
     <script src="./node_modules/html5-qrcode/html5-qrcode.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 
     <div class="container mt-5">
         <div class="row">
@@ -43,10 +44,34 @@
                             <th>Список отсканированных</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody id="tbody">
                         <!-- Scanned elements will be added here -->
                     </tbody>
                 </table>
+
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#clearTableModal">
+                    Очистить
+                </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="clearTableModal" tabindex="-1" aria-labelledby="clearTableModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="clearTableModalLabel">Очистить список?</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Нет</button>
+                                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="clearButton">Да</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <button class="btn btn-primary" id="sendButton">Отправить</button>
             </div>
         </div>
@@ -58,6 +83,18 @@
         const permissionDeniedMessage = document.getElementById("permissionDeniedMessage");
         const html5QrCode = new Html5Qrcode("reader");
         const scannedStrings = [];
+        const clearButton = document.getElementById("clearButton");
+        const agreeCheckbox = document.getElementById("agreeCheckbox");
+        const sendButton = document.getElementById("sendButton");
+
+        clearButton.addEventListener("click", function () {
+            clearTable();
+        });
+
+        function clearTable() {
+            document.getElementById("tbody").innerHTML = "";
+            scannedStrings.length = 0;
+        }
 
         Html5Qrcode.getCameras().then(devices => {
             if (devices && devices.length) {
@@ -77,7 +114,7 @@
 
         function onScanSuccess(decodedText, decodedResult) {
             if (!scannedStrings.includes(decodedText)) {
-                const scannedTable = document.getElementById("scannedTable");
+                const scannedTable = document.getElementById("tbody");
                 const newRow = scannedTable.insertRow();
                 const cell = newRow.insertCell();
                 cell.textContent = decodedText;
@@ -115,7 +152,7 @@
                 });
         }
 
-        document.getElementById("sendButton").addEventListener("click", function () {
+        sendButton.addEventListener("click", function () {
             const resultElement = document.getElementById("result");
             const decodedText = resultElement.textContent.replace("Code matched = ", "").trim();
 
