ui changed to darker

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 
-    <div class="container mt-5">
+    <div class="container mt-1">
         <div class="row">
             <div class="col-md-6 offset-md-3">
 
@@ -37,15 +37,15 @@
         </div>
     </div>
 
-    <div class="container mb-2 mt-3">
+    <div class="container mb-2 mt-1">
         <div class="row">
             <div class="col-md-6 offset-md-3">
                 <div id="reader" style="width: 100%;"></div>
             </div>
         </div>
-        <div class="row mt-3">
+        <div class="row mt-1">
             <div class="col-md-6 offset-md-3">
-                <table class="mb-3 table table-success table-striped" id="scannedTable">
+                <table class="mb-1 table table-secondary table-striped" id="scannedTable">
                     <thead>
                         <tr>
                             <th>Список отсканированных</th>
@@ -56,11 +56,11 @@
                     </tbody>
                 </table>
 
-                <button type="button" class="btn btn-danger" data-bs-toggle="modal" id="clearModalTrigger"
+                <button type="button" class="btn btn-secondary" data-bs-toggle="modal" id="clearModalTrigger"
                     data-bs-target="#clearTableModal">
                     Очистить
                 </button>
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" id="sendTableModalTrigger"
+                <button type="button" class="btn btn-dark" data-bs-toggle="modal" id="sendTableModalTrigger"
                     data-bs-target="#sendTableModal">
                     Отправить
                 </button>
