--- a/index.html
+++ b/index.html
@@ -11,99 +11,114 @@
     <title>QR-scanner</title>
     <script src="./node_modules/html5-qrcode/html5-qrcode.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <style>
+        .fixed-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 1050;
+        }
+    </style>
 </head>
 
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-
-    <div class="container mt-1">
+    <!-- reader (camera) -->
+    <div class="container fixed-container">
         <div class="row">
-            <div class="col-md-6 offset-md-3">
-
-                <div class="alert alert-success" role="alert" id="sended-successfuly" style="display: none;">
-                    Успешено отправлено
+            <div class="col-md-6 offset-md-3" style="width: 100%; height: 200px; overflow: hidden; position: relative;">
+                <div id="reader" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
                 </div>
-
-                <div class="form-group">
-                    <label for="cameraSelect">Выберите камеру:</label>
-                    <select class="form-control" id="cameraSelect"></select>
-
-                    <div class="alert alert-danger my-3" id="permissionDeniedMessage" style="display: none;">
-                        Невозможно получить доступ к камере. Разрешите использование камеры и перезагрузите страницу.
-                    </div>
-                </div>
-
             </div>
         </div>
     </div>
 
-    <div class="container mb-2 mt-1">
-        <div class="row">
-            <div class="col-md-6 offset-md-3">
-                <div id="reader" style="width: 100%;"></div>
+    <!-- popup messages -->
+    <div class="container fixed-container">
+        <div class="alert alert-success" role="alert" id="sended-successfuly" style="display: none;">
+            Успешено отправлено
+        </div>
+        <div class="alert alert-danger" id="permissionDeniedMessage" style="display: none;">
+            Невозможно получить доступ к камере. Разрешите использование камеры и перезагрузите страницу.
+        </div>
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- camera selection -->
+    <div class="container mb-1" style="margin-top: 205px;">
+        <div class="form-group">
+            <label for="cameraSelect">Выберите камеру:</label>
+            <select class="form-control" id="cameraSelect"></select>
+        </div>
+    </div>
+
+    <div class="container" id="loadingContainer" style="display: none;">
+        <div class="spinner-border" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+    </div>
+
+    <!-- scanned strings table -->
+    <div class="container" style="overflow-x: auto;">
+        <table class="table table-secondary table-striped" id="scannedTable">
+            <thead>
+                <tr>
+                    <th>Список отсканированных</th>
+                </tr>
+            </thead>
+            <tbody id="tbody">
+                <!-- Scanned elements will be added here -->
+            </tbody>
+        </table>
+    </div>
+
+    <!-- control buttons -->
+    <div class="container mb-2">
+        <button type="button" class="btn btn-secondary" data-bs-toggle="modal" id="clearModalTrigger"
+            data-bs-target="#clearTableModal">
+            Очистить
+        </button>
+        <button type="button" class="btn btn-dark" data-bs-toggle="modal" id="sendTableModalTrigger"
+            data-bs-target="#sendTableModal">
+            Отправить
+        </button>
+    </div>
+
+    <!-- modal dialogs -->
+    <div class="container">
+        <div class="modal fade" id="clearTableModal" tabindex="-1" aria-labelledby="clearTableModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="clearTableModalLabel">Очистить список?</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Нет</button>
+                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal"
+                            id="clearButton">Да</button>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="row mt-1">
-            <div class="col-md-6 offset-md-3">
-                <table class="mb-1 table table-secondary table-striped" id="scannedTable">
-                    <thead>
-                        <tr>
-                            <th>Список отсканированных</th>
-                        </tr>
-                    </thead>
-                    <tbody id="tbody">
-                        <!-- Scanned elements will be added here -->
-                    </tbody>
-                </table>
 
-                <button type="button" class="btn btn-secondary" data-bs-toggle="modal" id="clearModalTrigger"
-                    data-bs-target="#clearTableModal">
-                    Очистить
-                </button>
-                <button type="button" class="btn btn-dark" data-bs-toggle="modal" id="sendTableModalTrigger"
-                    data-bs-target="#sendTableModal">
-                    Отправить
-                </button>
-
-                <!-- Modal -->
-                <div class="modal fade" id="clearTableModal" tabindex="-1" aria-labelledby="clearTableModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h1 class="modal-title fs-5" id="clearTableModalLabel">Очистить список?</h1>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                    aria-label="Close"></button>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Нет</button>
-                                <button type="button" class="btn btn-primary" data-bs-dismiss="modal"
-                                    id="clearButton">Да</button>
-                            </div>
-                        </div>
+        <div class="modal fade" id="sendTableModal" tabindex="-1" aria-labelledby="sendTableModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="sendTableModalLabel">Отправить список?</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Нет</button>
+                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal"
+                            id="sendButton">Да</button>
                     </div>
                 </div>
-
-                <div class="modal fade" id="sendTableModal" tabindex="-1" aria-labelledby="sendTableModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h1 class="modal-title fs-5" id="sendTableModalLabel">Отправить список?</h1>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                    aria-label="Close"></button>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Нет</button>
-                                <button type="button" class="btn btn-primary" data-bs-dismiss="modal"
-                                    id="sendButton">Да</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-
             </div>
         </div>
     </div>
@@ -119,6 +134,19 @@
         const agreeCheckbox = document.getElementById("agreeCheckbox");
         const sendButton = document.getElementById("sendButton");
         const sendedSuccess = document.getElementById("sended-successfuly");
+        let qrboxFunction = function (viewfinderWidth, viewfinderHeight) {
+            let minEdgePercentage = 0.7; // 70%
+            let minEdgeSize = Math.min(viewfinderWidth, viewfinderHeight);
+            let qrboxSize = Math.floor(minEdgeSize * minEdgePercentage);
+            return {
+                width: qrboxSize,
+                height: qrboxSize
+            };
+        }
+        const config = { fps: 10, qrbox: qrboxFunction };
+        var audio = new Audio('beep.mp3');
+        const loadingContainer = document.getElementById("loadingContainer");
+
 
         clearModalTriggerBtn.addEventListener("click", () => {
             document.getElementById('clearTableModal').scrollIntoView({ behavior: "smooth" });
@@ -161,6 +189,8 @@
                 const cell = newRow.insertCell();
                 cell.textContent = decodedText;
                 scannedStrings.push(decodedText);
+                cell.scrollIntoView({ behavior: "smooth" });
+                audio.play();
             }
         }
 
@@ -179,10 +209,7 @@
 
         function startCameraById(CameraId) {
             html5QrCode.start(CameraId,
-                {
-                    fps: 10,
-                    qrbox: { width: 250, height: 250 }
-                },
+                config,
                 (decodedText, decodedResult) => {
                     onScanSuccess(decodedText, decodedResult);
                 },
@@ -195,6 +222,7 @@
         }
 
         sendButton.addEventListener("click", function () {
+            loadingContainer.style.display = "block";
             const jsonData = [];
             const tableBody = document.getElementById("tbody");
             const rows = tableBody.getElementsByTagName("tr");
@@ -223,9 +251,10 @@
                     if (response.status === 201) {
                         clearTable();
                         permissionDeniedMessage.style.display = "none";
+                        loadingContainer.style.display = "none";
                         sendedSuccess.style.display = 'block';
                         sendedSuccess.scrollIntoView({ behavior: "smooth" });
-                        setTimeout(() => { alertElement.style.display = "none"; }, 3000);
+                        setTimeout(() => { sendedSuccess.style.display = "none"; }, 3000);
                     } else {
                         throw new Error(`Error: ${response.status}`);
                     }
